Add an ability to select date.

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
             <ul id="cal_legend" class="calendar-legend">
             </ul>
             <div id='current-time'></div>
+            <input style="font-size:15px;" type="text" id='select-date'></input>
         </div>
     </div>
 </body>
