--- a/client/index.html
+++ b/client/index.html
@@ -34,8 +34,8 @@
             <ul id="cal_legend" class="calendar-legend">
             </ul>
             <div id='current-time'></div>
-            <input style="font-size:15px;" type="text" autocomplete="off" autofill="off" id='select-date'></input>
-            <input type="checkbox" id="auto-refresh" checked>Auto Refresh</div>
+            <input style="font-size:15px;" type="text" autocomplete="off" autofill="off" id='select-date'></input><br/>
+            <input type="checkbox" id="auto-refresh" checked>Auto Refresh</input>
         </div>
     </div>
 </body>
